# tiny-slam-ros-cpp

./: CHANGELOG.rst  CMakeLists.txt  README  README.md  default_view.rviz  package.xml  tiny_run.launch  tinyslam_run.launch  tracks.yaml
rosmake/: CMakeLists.txt  manifest.xml
rviz/: debug.rviz
src/: geometry_utils.h  grid_map.h  sensor_data.h  state_data.h  tiny_fascade.h  tiny_scan_matcher.h  tiny_slam.cpp  tiny_world.h
src/core/: Doxyfile  geometry_utils.h  grid_scan_matcher.h  laser_scan_grid_world.h  monte_carlo_scan_matcher.h  particle_filter.h  sensor_data.h  state_data.h
src/core/maps/: area_occupancy_estimator.h  cell_occupancy_estimator.h  const_occupancy_estimator.h  grid_cell_factory.h  grid_cell_strategy.h  grid_map.h
src/ros/: LaserScanObserver.h  TopicWithTransform.h  laser_scan_observer.h  rviz_grid_viewer.h  topic_with_transform.h  utils.h
src/tiny_slam/: tiny_fascade.h  tiny_grid_cells.h  tiny_scan_cost_estimator.h  tiny_scan_matcher.h  tiny_slam.cpp  tiny_world.h
test/: utest.cpp
test/AreaEstimator/: BaseTests_area_estimator.cpp  BorderTouchTests_area_estimator.cpp  GettingIntoBorderTests_area_estimator.cpp  RobotInsideTests_area_estimator.cpp  area_estimator_test_utils.h  utest_area_estimator.cpp
test/AutoExpandbleMap/: AutoExpandble_map_utest.cpp  Map_test.h
