<?xml version="1.0"?>
<package>
  <name>tiny_slam</name>
  <version>0.1.2</version>
  <description>TinySLAM ROS implementation</description>
  <maintainer email="ros@osll.ru">OSLL</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/tiny_slam</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
  <test_depend>rosunit</test_depend>
</package>
